--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>CARDSWOOD</title>
+    <link rel="icon" href="logo_noph.png" type="image/png">
   </head>
   <body>
     <div id="app"></div>
